# file-management-backend

./: .gitignore  Cargo.toml
src/: error.rs  main.rs  web.rs
src/archive/: versioning.rs
src/aws/: copy.rs  create.rs  delete.rs  get.rs  mod.rs  rename.rs  transfer.rs
src/base/: file.rs  file_version.rs  folder.rs  user.rs
src/db/: file_db.rs  file_version_db.rs  folder_db.rs  mod.rs  mongo.rs  user_db.rs
src/handler/: content.rs  mod.rs
src/handler/auth/: login.rs  logout.rs  refresh.rs
src/handler/file/: create.rs  delete.rs  get.rs  mod.rs  restore.rs  update.rs
src/handler/folder/: create.rs  delete.rs  get.rs  update.rs
src/handler/user/: create.rs  delete.rs  get.rs  mod.rs  profile.rs  update.rs
src/handler/version/: delete.rs  get.rs
src/helper/: body.rs  comparison.rs  cookie.rs  depot.rs  file.rs  form.rs  jwt.rs  mod.rs  param.rs  position.rs  print_validation.rs  versioning.rs
src/middleware/: auth.rs  file.rs  folder.rs  mod.rs
src/request/file/: create.rs  delete.rs  mod.rs  restore.rs  update.rs
src/request/folder/: create.rs  update.rs
src/request/user/: create.rs  delete.rs  login.rs  mod.rs  update.rs
src/response/: file.rs  folder.rs  mod.rs  user.rs
src/routes/: file.rs  folder.rs  mod.rs  user.rs
src/service/: file_service.rs  file_version_service.rs  folder_service.rs  mod.rs  user_service.rs
src/validation/: aws.rs  file.rs  mod.rs  user.rs
