[package]
name = "final-project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "2.3.1"
salvo = { version = "0.37.4", features = ["affix"] }
validator = { version = "0.16.0", features = ["derive"] }
fancy-regex = "0.10.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
aws-sdk-s3 = "0.21.0"
aws-config = "0.51.0"
aws-smithy-http = "0.51.0"
futures = "0.3.25"
mime_guess = "2.0.4"
async-trait = "0.1.58"
thiserror = "1.0.37"
jsonwebtoken = "8.1.1"
dotenv = "0.15.0"
tokio = { version = "1.21.2", features = ["full"] }
chrono = "0.4.22"
